2012-03-18  Araki Ken  <arakiken@users.sf.net>

	* MLTerm.java:
	  - Application cursor key is supported.
	  - setTextLimit( 100000)

	* MLTermPty.java: isAppCursorKeys() is added.

	* MLTermPty.c:
	  - nativeIsAppCursorKeys() is added.
	  - ml_screen_event_listener_t::window_scroll_{up|down}ward_region are
	    partially implemented.
	  - Each native_obj_t has its MLTermPtyListener object, which was
	    set to static variable.

2012-03-17  Araki Ken  <arakiken@users.sf.net>

	* MLTerm.java: The way of calling wait/notifyAll is fixed.

	* java/Makefile.in: Minor fixes.

2012-03-17  Araki Ken  <arakiken@users.sf.net>

	* MLTermPty.java:
	  waitForReading() is added.

	* MLTermPty.c:
	  Java_mlterm_MLTermPty_waitForReading() is added.

	* MLTerm.java:
	  - startPtyWatcher() to check MLTermPty.waitForReading() added.
	  - setCaret(null)

2012-03-16  Araki Ken  <arakiken@users.sf.net>

	* ConnectDialog.java:
	  SWT.PASSWORD is removed to create "Encoding" text field.

	* MLTerm.java:
	  - numOfScrolledOutLines member is added.
	  - Redrawing performance is improved.
	  - Shift-tab key is processed.

	* MLTermPtyListener.java:
	  redraw() is renamed to lineScrolledOut().

	* MLTermPty.java: numOfScrolledOutLines member is removed.

	* MLTermApplet.java: Minor fixes.

	* mlterm.html -> mltermlet.html

2012-03-14  Araki Ken  <arakiken@users.sf.net>

	* man/mlterm.1, doc/ja/README.ja: Updated.

	* x_shortcut.c:
	  Not only "Mod" but "Mod1"-"Mod5" keys are available for ~/.mlterm/key.
	  (SF Patch #3496423 is merged, Thanks to Kevin Schoedel)

	* mkf_tblfunc_loader.c: mkf_set_alt_lib_dir() is added.

	* java/INSTALL: Updated.

	* java/Makefile.in: Minor fixes.

	* java/manifest.mf: Renamed to java/manifest.mf.in.
	  java/manifest-win32.mf: Removed.

	* java/MLTermPty.c: Added.
	  - ml_config_listener_t::{set|get}_config and ::exec_cmd are implemented.
	  - Options in ~/.mlterm/main are applied.

	* java/mlterm/ConnectDialog.java, java/mlterm/MLTermListener.java,